<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, BribeAlertMobileActivity!</string>
    <string name="app_name">Bribe Alert</string>
    <string name="logo_content_description">Bribe alert logo</string>
    <string name="need_help_button_text">I need help !</string>
    <string name="is_this_corruption_button_text">Is this corruption ?</string>
    <string name="i_report_button_text">I report !</string>
    <string name="ti_logo_content_description">The Transparency International logo</string>
    <string name="blind_text">Blind text</string>
    <string name="telephone_number_text">Phone:</string>
    <string name="serverIP">88.198.15.206:8000</string>
    <string name="zip_code_text">ZipCode:</string>
    <string name="street_name_text">Street:</string>
    <string name="fax_number_text">Fax:</string>
    <string name="url_text">URL:</string>
    <string name="email_text">E-Mail:</string>
    <string name="q_1">Someone misused his or her power?</string>
	<string name="q_2">What kind of power did he or she misused?</string>
	<string name="q_3">Did someone benefit from this action</string>
	<string name="q_4">What was his or her interest?</string>
	<string name="q_5">What was the reason behind the misuse of power?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="violence">Physical power</string>
	<string name="assignments">Assignments</string>
	<string name="employment">Employment</string>
	<string name="executivePower">Executive Power</string>
	<string name="financialAdvantage">Financial Advantage</string>
	<string name="favouratism">Favouratism</string>
	<string name="information">Information</string>
	<string name="other">Other</string>
	<string name="ideologicalAndpolitical">Ideological or Political</string>
	<string name="privateGain">Private Gain</string> 
    <string name="description_hint">Please add a description</string>
    <string name="description_header">Description:</string>
    <string name="publish_text">If checked your evidence will be published public.</string>
    <string name="upload_button_text">Upload data</string>
    <string name="publish_button_text">Publish data</string>
    <string name="inbox_content_description">The inbox button</string>
    <string name="token_prefs">tokens</string>
    <string name="secret_token">secrettoken</string>
	<string name="warning_content_description">The bribe warning picture</string>
	<string name="bribe_warning">It is probably a bribe attempt, you should report it.</string>
	<string name="no_bribe">It does not look like a bribe.</string>
	<string name="ignore_no_bribe">You can report it anyways</string>
	<string name="video_recording">video</string>
</resources>

