<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/question1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:keepScreenOn="true"
    android:orientation="vertical" >

    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:keepScreenOn="true"
        android:orientation="vertical" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:keepScreenOn="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/q_1" >
            </TextView>

            <Button
                android:id="@+id/answer1_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="nextLayout"
                android:text="@string/yes" />

            <Button
                android:id="@+id/answer1_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showNoBribe"
                android:text="@string/no" />
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:keepScreenOn="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/question2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/q_2" >
            </TextView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showNoBribe"
                android:text="@string/violence" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="nextLayout"
                android:text="@string/assignments" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="nextLayout"
                android:text="@string/employment" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="nextLayout"
                android:text="@string/executivePower" />
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:keepScreenOn="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/question3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/q_3" >
            </TextView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="nextLayout"
                android:text="@string/yes" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showNoBribe"
                android:text="@string/no" />
</LinearLayout>
            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:keepScreenOn="true"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/question4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/q_4" >
                </TextView>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="nextLayout"
                    android:text="@string/financialAdvantage" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="nextLayout"
                    android:text="@string/favouratism" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="nextLayout"
                    android:text="@string/information" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="showNoBribe" 
                    android:text="@string/other"/>
            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:keepScreenOn="true"
                android:orientation="vertical" >

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="showNoBribe"
                    android:text="@string/ideologicalAndpolitical" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="showBribe"
                	android:text="@string/privateGain" />
            </LinearLayout>
    </ViewFlipper>

    <Button
        android:id="@+id/iReportButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="startReportingActivity"
        android:text="@string/i_report_button_text" />

</LinearLayout>