<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Spinner 
        android:id="@+id/filePicker"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <TextView 
        android:id="@+id/descriptionHeader"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"	
        android:text="@string/description_header"/>
    
    <EditText 
        android:id="@+id/descriptionInputField"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:inputType="text"
        android:layout_gravity="center_horizontal"
        android:hint="@string/description_hint" />

    <CheckBox 
        android:id="@+id/publish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"	
        android:text="@string/publish_text"
        android:onClick="publish"
        />
    
    <Button 
    	android:id="@+id/uploadButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"	
        android:text="@string/upload_button_text"
        android:layout_gravity="center_horizontal"
        android:onClick="uploadData"/>
    
</LinearLayout>