<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:keepScreenOn="true"
    >
    
    <ImageView 
        android:id="@+id/tiLogo"
        android:contentDescription="@string/ti_logo_content_description"
        android:src="@drawable/transparency_international"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"/>
 
    <TextView 
        android:id="@+id/tiChapterText"
        style="@style/TextViewStyle"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/blind_text"/>
    
    <GridLayout 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="5dp"
       >
    

    <TextView
        android:id="@+id/streetNameText"
        style="@style/TextViewStyleName"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/street_name_text" />
    
    <TextView 
        android:id="@+id/streetName"
        style="@style/TextViewStyleValues"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/blind_text" android:layout_width="fill_parent"/>
    
    <TextView
        android:id="@+id/zipCodeText"
        style="@style/TextViewStyleName"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/zip_code_text" />
    
    <TextView 
        android:id="@+id/zipCode"
        style="@style/TextViewStyleValues"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/blind_text"/>
    
    <TextView
        android:id="@+id/telephoneNumberText"
        style="@style/TextViewStyleName"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/telephone_number_text" />
    
    <TextView 
        android:id="@+id/telephoneNumber"
        style="@style/TextViewStyleName"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/blind_text"/>
    
    <TextView
        android:id="@+id/faxNumberText"
        style="@style/TextViewStyleName"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/fax_number_text" />
    
    <TextView 
        android:id="@+id/faxNumber"
        style="@style/TextViewStyleValues"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_row="3"
        android:layout_column="1"
        android:text="@string/blind_text"/>
    
    <TextView
        android:id="@+id/urlText"
        style="@style/TextViewStyleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/url_text" />
    
    <TextView 
        android:id="@+id/url"
        style="@style/TextViewStyleValues"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_row="4"
        android:layout_column="1"
        android:text="@string/blind_text"/>

    <TextView
        android:id="@+id/emailText"
        style="@style/TextViewStyleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:text="@string/email_text" />
    
    <TextView 
        android:id="@+id/email"
        style="@style/TextViewStyleValues"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_row="5"
        android:layout_column="1"
        android:text="@string/blind_text"/>
    
	</GridLayout>
        
    <Button 
        android:id="@+id/iReportButton"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/i_report_button_text"
        android:onClick="startReportingActivity"
        android:layout_margin="5dp"
        />

</LinearLayout>